--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,9 @@
 <div class='container px-5 px-sm-0'>
   <div class='row'>
     <div class='col-md-3'>
+      <div>
+        <%= flash[:notice] %>
+      </div>
       <h2>User info</h2>
       <%= render 'info', user: @user %>
       <h2 class="mt-3">New book</h2>
